加密算法专题

--- a/【专题】加密算法/（1）奇妙的安全旅行之加密算法概述.md
+++ b/【专题】加密算法/（1）奇妙的安全旅行之加密算法概述.md
@@ -32,7 +32,7 @@ hi，大家好呀，信息安全作为当前社会中比较重要的一个课题
 
 每种算法又包括不同的实现，其算法复杂度、安全性以及效率都有区别，为了便于大家从整体上对加密算法有个整体认识，我绘制了下面这种图，需要的建议收藏保存。
 
-![加密算法](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/2f74b05fe2934940953dcab592793fc5~tplv-k3u1fbpfcp-watermark.image)
+![加密算法](https://i.loli.net/2021/02/14/rPpoU65DRC18lqt.png)
 
 #### 消息摘要算法
 
